--- a/Quiz_Vlajky/Quiz_Vlajky.Android/Quiz_Vlajky.Android.csproj
+++ b/Quiz_Vlajky/Quiz_Vlajky.Android/Quiz_Vlajky.Android.csproj
@@ -116,5 +116,17 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\Sweden.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Montenegro.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Portugal.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Serbia.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Lithuania.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
